--- a/hw01/hw01_gapminder.Rmd
+++ b/hw01/hw01_gapminder.Rmd
@@ -1,1 +1,70 @@
+---
+sutitle: "STAT 545A - Assignment 01"
+author: "Dan Hadley"
+title: Exploration of gapminder
+date: "9/17/2019"
+output: github_document
+---
 
+## Introduction
+
+We explore the gapminder dataset available in the gapminder package.  All analyses are performed using three R packages: [gapminder](https://cran.r-project.org/web/packages/gapminder/index.html), [tibble](https://cran.r-project.org/web/packages/tibble/index.html), [DT](https://cran.r-project.org/web/packages/DT/index.html).
+
+The first code chunk, excluded from the document, loads these packages using the `library` command.
+```{r load, echo=FALSE}
+library(gapminder)
+library(tibble)
+library(DT)
+```
+
+## Overview
+
+To get a feel for the gapminder dataset, we can view the first 6 rows using the `head()` function.
+```{r}
+head(gapminder)
+```
+
+We see that this function produces a 6 row and 6 column object called a tibble.  The dataset contains information on the life expectancy (in years), population, and GPD per capita (US\$, inflation-adjusted) for `r length(unique(gapminder$country))` countries from `r min(gapminder$year)` to `r max(gapminder$year)` measured every 5 years.
+
+## Analysis
+
+To get a feel for the dataset, the `summary()` function calclulates the minimum, 3rd quartile, median, mean, 1st quartile, and maximum value for all numeric columns.  Columns with character data, often saved as the factor data type in `R`, performs counts on the unique character entries.
+```{r summ}
+(summ.gap <- summary(gapminder)) #Surrounding with () declares variable and prints value(s)
+
+cnt <- aggregate(gapminder, by=list(gapminder$continent), length) #counts observations by continent
+```
+
+We see that Africa is the most represented continent with `r max(cnt$continent)` observations, which has `r diff(sort(cnt$continent)[1:2])` more observations than the next most represented continent, `r cnt$Group.1[which(rank(-cnt$continent) == 2)]`.  For numerical data, `summary()` presents a quick snapshot of its distribution.  For example, we see that GDP per capita ranges from `r min(cnt$gdpPercap)` years to `r max(cnt$gdpPercap)` and the mean (`r mean(gapminder$gpdPercap)`) is twice as large as the median (`r median(gapminder$gpdPercap)`).  Thus, the GPD per capita data has a large positive skew.
+
+Suppose we are interested in the relationship between Life Expectancy and GDP per capita.  We plot life expectancy against GDP per capita for all `r nrow(gapminder[gapminder$year == max(gapminder$year),])` countries where the most recent year's data, `r max(gapminder$year)`, is available.
+
+```{r echo=FALSE}
+dat <- gapminder[gapminder$year == max(gapminder$year), c(1, 4, 6)]
+
+plot(dat$gdpPercap, dat$lifeExp, pch=16, cex=0.5,
+     xlab="GPD per Capita", ylab="Life Expectancy",
+     main='Plot of 2007 Life Expectancy against 2007 GPD per Capita',
+     ylim=c(30, 90))
+text(x=dat$gdpPercap[which.max(dat$lifeExp)], y=max(dat$lifeExp)+2,
+     labels=dat$country[which.max(dat$lifeExp)], cex=0.75)
+text(x=max(dat$gdpPercap), y=dat$lifeExp[which.max(dat$gdpPercap)]+2,
+     labels=dat$country[which.max(dat$gdpPercap)], cex=0.75)
+text(x=dat$gdpPercap[which.min(dat$lifeExp)], y=min(dat$lifeExp)-2,
+     labels=dat$country[which.min(dat$lifeExp)], cex=0.75)
+
+```
+
+We see from the plot that Japan had the highest life expectancy in 2007 at `r round(max(dat$lifeExp), 1)` years and Norway had the highest GDP per capita in 2007 at US\$`r format(max(dat$gdpPercap), scientific=FALSE)`.  Meanwhile, Swaziland had the lowest life expectancy in 2007 at `r round(min(dat$lifeExp), 1)` years.  The result is a data set with `r nrow(gapminder)` observations.
+
+If we are interested in Canada specifically, we can limit our analysis to just one country.  Suppose we want to plot life expectancy against GDP per capita for Canada from `r min(gapminder$year)` to `r max(gapminder$year)`. In order to add the third dimension of time, the plot symbols are the years of the observations.
+
+```{r plot, warning=FALSE, fig.cap="Plot of Life Expectancy (years) versus GPD per capita (USD) in Canada every five years from 1952 to 2007"}
+can <- gapminder[gapminder$country=='Canada',] #Subset gapminder dataset to Canada's observations
+
+# Plot with year as plot symbol
+plot(can$gdpPercap, can$lifeExp, type='n',
+     xlab="GPD per Capita", ylab="Life Expectancy",
+     main="Data for Canada from 1952 thru 2007")
+text(can$gdpPercap, can$lifeExp, labels=can$year, cex=0.8)
+```
