--- a/hw01/hw01_gapminder.Rmd
+++ b/hw01/hw01_gapminder.Rmd
@@ -8,22 +8,21 @@ output:
     toc: true
 ---
 
-```{r setup, include=FALSE, echo=FALSE,warning=FALSE}
+```{r setup, include=FALSE, echo=FALSE, warning=FALSE}
+## Set path to save images
 knitr::opts_chunk$set(
   fig.path = "hw01_gapminder_files/")
+library(knitr)
+library(gapminder)
+library(tibble)
+library(DT)
 ```
 
 ## 1. Introduction
 
 We explore the gapminder dataset available in the gapminder package.  All analyses are performed using three R packages: [gapminder](https://cran.r-project.org/web/packages/gapminder/index.html), [tibble](https://cran.r-project.org/web/packages/tibble/index.html), [DT](https://cran.r-project.org/web/packages/DT/index.html).
 
-The first code chunk, excluded from the document, loads these packages using the `library` command.
-```{r load, echo=FALSE}
-library(knitr)
-library(gapminder)
-library(tibble)
-library(DT)
-```
+In the first code chunk, excluded from the document, we set the file path for the plots rendered by R Markdown and load the above packages and `knitr` using the `library` command.
 
 ## 2. Overview
 
