--- a/hw01/hw01_gapminder.Rmd
+++ b/hw01/hw01_gapminder.Rmd
@@ -1,7 +1,6 @@
 ---
-sutitle: "STAT 545A - Assignment 01"
+title: "Exploration of Gapminder"
 author: "Dan Hadley"
-title: Exploration of gapminder
 date: "9/17/2019"
 output: 
   github_document:
@@ -9,22 +8,25 @@ output:
 ---
 
 ```{r setup, include=FALSE, echo=FALSE, warning=FALSE}
-## Set path to save images
+# Set path to save images
 knitr::opts_chunk$set(
   fig.path = "hw01_gapminder_files/")
-library(knitr)
+```
+
+```{r load, warning=FALSE, echo=FALSE}
+# Load libraries
 library(gapminder)
 library(tibble)
 library(DT)
 ```
 
-## 1. Introduction
+## Introduction
 
 We explore the gapminder dataset available in the gapminder package.  All analyses are performed using three R packages: [gapminder](https://cran.r-project.org/web/packages/gapminder/index.html), [tibble](https://cran.r-project.org/web/packages/tibble/index.html), [DT](https://cran.r-project.org/web/packages/DT/index.html).
 
 In the first code chunk, excluded from the document, we set the file path for the plots rendered by R Markdown and load the above packages and `knitr` using the `library` command.
 
-## 2. Overview
+## Overview
 
 To get a feel for the gapminder dataset, we can view the first 6 rows using the `head()` function.
 ```{r}
@@ -33,16 +35,18 @@ head(gapminder)
 
 We see that this function produces a 6 row and 6 column object called a tibble.  The dataset contains information on the life expectancy (in years), population, and GPD per capita (US\$, inflation-adjusted) for `r length(unique(gapminder$country))` countries from `r min(gapminder$year)` to `r max(gapminder$year)` measured every 5 years.
 
-## 3. Analysis
+## Analysis
 
 To get a feel for the dataset, the `summary()` function calclulates the minimum, 3rd quartile, median, mean, 1st quartile, and maximum value for all numeric columns.  Columns with character data, often saved as the factor data type in `R`, performs counts on the unique character entries.
-```{r summ}
+```{r summ, echo=FALSE}
 (summ.gap <- summary(gapminder)) #Surrounding with () declares variable and prints value(s)
 
 cnt <- aggregate(gapminder, by=list(gapminder$continent), length) #counts observations by continent
 ```
 
 We see that Africa is the most represented continent with `r max(cnt$continent)` observations, which has `r diff(sort(cnt$continent)[1:2])` more observations than the next most represented continent, `r cnt$Group.1[which(rank(-cnt$continent) == 2)]`.  For numerical data, `summary()` presents a quick snapshot of its distribution.  For example, we see that GDP per capita ranges from `r min(cnt$gdpPercap)` years to `r max(cnt$gdpPercap)` and the mean (`r mean(gapminder$gpdPercap)`) is twice as large as the median (`r median(gapminder$gpdPercap)`).  Thus, the GPD per capita data has a large positive skew.
+
+### 2007 Life Expectancy and GPD per Capita
 
 Suppose we are interested in the relationship between Life Expectancy and GDP per capita.  We plot life expectancy against GDP per capita for all `r nrow(gapminder[gapminder$year == max(gapminder$year),])` countries where the most recent year's data, `r max(gapminder$year)`, is available.
 
@@ -63,6 +67,8 @@ text(x=dat$gdpPercap[which.min(dat$lifeExp)], y=min(dat$lifeExp)-2,
 ```
 
 We see from the plot that Japan had the highest life expectancy in 2007 at `r round(max(dat$lifeExp), 1)` years and Norway had the highest GDP per capita in 2007 at US\$`r format(max(dat$gdpPercap), scientific=FALSE)`.  Meanwhile, Swaziland had the lowest life expectancy in 2007 at `r round(min(dat$lifeExp), 1)` years.  The result is a data set with `r nrow(gapminder)` observations.
+
+### Canada Life Expectancy and GPD per Capita
 
 If we are interested in Canada specifically, we can limit our analysis to just one country.  Suppose we want to plot life expectancy against GDP per capita for Canada from `r min(gapminder$year)` to `r max(gapminder$year)`. In order to add the third dimension of time, the plot symbols are the years of the observations.
 
