--- a/hw01/hw01_gapminder.Rmd
+++ b/hw01/hw01_gapminder.Rmd
@@ -3,7 +3,8 @@ title: "Exploration of Gapminder"
 author: "Dan Hadley"
 date: "9/17/2019"
 output: 
-  github_document:
+  md_document:
+    variant: markdown_github
     toc: true
 ---
 
