Updating gapminder analysis

--- a/hw01/hw01_gapminder.Rmd
+++ b/hw01/hw01_gapminder.Rmd
@@ -17,27 +17,29 @@ knitr::opts_chunk$set(
 library(gapminder)
 library(tibble)
 library(DT)
+library(knitr)
 ```
 
 ## 1. Introduction
 
-We explore the gapminder dataset available in the gapminder package.  All analyses are performed using three R packages: [gapminder](https://cran.r-project.org/web/packages/gapminder/index.html), [tibble](https://cran.r-project.org/web/packages/tibble/index.html), [DT](https://cran.r-project.org/web/packages/DT/index.html).
+We explore the gapminder dataset available in the gapminder package.  All analyses are performed using the `R` software with the following packages: [gapminder](https://cran.r-project.org/web/packages/gapminder/index.html), [tibble](https://cran.r-project.org/web/packages/tibble/index.html), [DT](https://cran.r-project.org/web/packages/DT/index.html), [knitr](https://cran.r-project.org/web/packages/knitr/index.html).
+<!--[ggplot2](https://cran.r-project.org/web/packages/ggplot2/index.html),-->
 
-In the first code chunk, excluded from the document, we set the file path for the plots rendered by R Markdown and load the above packages and `knitr` using the `library` command.
+This exploration should give the reader an idea of the type of data the `gapminder` dataset contains and some interesting analyses that can be performed on the data.
 
 ## 2. Overview
 
-To start, we can view the columns in the dataset using `R`'s `names()` function.
+To start, we can view the column names in the dataset using the `names()` function.
 ```{r colnames, echo=FALSE}
 names(gapminder)
 ```
 
-The columns in the dataset are Country, Continent, Year, Life Expectancy, Population, and GPD per capita.  To see the data type for each column, we can view the structure of the dataset via the `str()` function.
+The columns in the dataset are Country, Continent, Year, Life Expectancy, Population, and GDP per capita.  To see the data type for each column, we can view the structure of the dataset via the `str()` function.
 ```{r structure, echo=FALSE}
 str(gapminder)
 ```
 
-This reports the object's class, as well as the data type for each column.  Note that both country and continent are labeled as factors.  Factor is a data type in `R` used for character data, essentially treating each unique character entry as a group.  Knowing the data type for each column gives us an idea of the type of functions we can apply to each column or if the data type should be changed to something more appropriate.
+The result shows the `gapminder` class as well as the data type for each column.  Note that both country and continent are labeled as factors.  Factor is a data type in `R` used for character data, essentially treating each unique character entry as a group.  The data type of each column is useful when applying functions to column data.
 
 
 To get a feel for the gapminder dataset, we can view the first 6 rows using the `head()` function.
@@ -45,7 +47,7 @@ To get a feel for the gapminder dataset, we can view the first 6 rows using the 
 head(gapminder)
 ```
 
-We see that this function produces a 6 row and 6 column object called a tibble.  The dataset contains information on the life expectancy (in years), population, and GPD per capita (US\$, inflation-adjusted) for `r length(unique(gapminder$country))` countries from `r min(gapminder$year)` to `r max(gapminder$year)` measured every 5 years.
+The result is a 6 row and 6 column object called a tibble.  The dataset contains information on the life expectancy (in years), population, and GDP per capita (US\$, inflation-adjusted) for `r length(unique(gapminder$country))` countries from `r min(gapminder$year)` to `r max(gapminder$year)` measured every 5 years.  The complete `gapminder` data set has `r nrow(gapminder)` observations.
 
 ## 3. Analysis
 
@@ -56,18 +58,41 @@ To get a feel for the dataset, the `summary()` function calclulates the minimum,
 cnt <- aggregate(gapminder, by=list(gapminder$continent), length) #counts observations by continent
 ```
 
-We see that Africa is the most represented continent with `r max(cnt$continent)` observations, which has `r diff(sort(cnt$continent)[1:2])` more observations than the next most represented continent, `r cnt$Group.1[which(rank(-cnt$continent) == 2)]`.  For numerical data, `summary()` presents a quick snapshot of its distribution.  For example, we see that GDP per capita ranges from `r min(cnt$gdpPercap)` years to `r max(cnt$gdpPercap)` and the mean (`r mean(gapminder$gpdPercap)`) is twice as large as the median (`r median(gapminder$gpdPercap)`).  Thus, the GPD per capita data has a large positive skew.
+Africa has `r max(cnt$continent)` observations, which is `r diff(sort(cnt$continent)[1:2])` more than the next continent, `r cnt$Group.1[which(rank(-cnt$continent) == 2)]`.  For numerical data, `summary()` presents a quick snapshot of its distribution.  For example, we see that GDP per capita ranges from `r min(cnt$gdpPercap)` USD to `r max(cnt$gdpPercap)` USD, and the mean (`r mean(gapminder$gdpPercap)`) is twice as large as the median (`r median(gapminder$gdpPercap)`).  Thus, the GDP per capita data has a large positive skew.
 
-### 3.1 Life Expectancy and GPD per Capita in 2007
+### 3.1 Life Expectancy by Continent
 
-Suppose we are interested in the relationship between Life Expectancy and GDP per capita.  We plot life expectancy against GDP per capita for all `r nrow(gapminder[gapminder$year == max(gapminder$year),])` countries where the most recent year's data, `r max(gapminder$year)`, is available.
+```{r years, echo=FALSE}
+yrs <- unique(gapminder$year)
+yrs.seq <- yrs[c(1, 4, 8, 12)]
+```
 
-```{r gpd-vs-lifeExp, echo=FALSE}
+Like `summary()`, boxplots provide a snapshot of the distribution of data, allowing comparison across groups.  In this case, we compare the distribution of life expectancies by continent for four years: `r combine_words(yrs.seq)`.
+
+```{r boxplots, echo=FALSE, fig.width=10, fig.height=7}
+par(mfrow=c(2,2))
+for (i in yrs.seq) {
+  dat <- gapminder[gapminder$year == i,]
+  boxplot(lifeExp ~ continent, data=dat,
+          main=paste("Life Expectancies in", i),
+          xlab="Continent", ylab="Years",
+          ylim=c(30, 82))
+}
+par(mfrow=c(1,1))
+```
+
+From the boxplots, it is clear that life expectancies of Asian countries have steadily increased since 1952, and the interquartile range has gotten much smaller.  This indicates that the difference between countries with long and short life expectancies is shrinking.
+
+### 3.2 Life Expectancy and GDP per Capita in 2007
+
+The relationship between Life Expectancy and GDP per capita for the most recent year, `r max(gapminder$year)`, can be visualized with a scatterplot for all `r nrow(gapminder[gapminder$year == max(gapminder$year),])` countries.
+
+```{r gdp-vs-lifeExp, echo=FALSE}
 dat <- gapminder[gapminder$year == max(gapminder$year), c(1, 4, 6)]
 
 plot(dat$gdpPercap, dat$lifeExp, pch=16, cex=0.5,
-     xlab="GPD per Capita", ylab="Life Expectancy",
-     main='Plot of 2007 Life Expectancy against 2007 GPD per Capita',
+     xlab="GDP per Capita", ylab="Life Expectancy",
+     main='Plot of 2007 Life Expectancy against 2007 GDP per Capita',
      ylim=c(30, 90))
 text(x=dat$gdpPercap[which.max(dat$lifeExp)], y=max(dat$lifeExp)+2,
      labels=dat$country[which.max(dat$lifeExp)], cex=0.75)
@@ -78,18 +103,18 @@ text(x=dat$gdpPercap[which.min(dat$lifeExp)], y=min(dat$lifeExp)-2,
 
 ```
 
-We see from the plot that Japan had the highest life expectancy in 2007 at `r round(max(dat$lifeExp), 1)` years and Norway had the highest GDP per capita in 2007 at US\$`r format(max(dat$gdpPercap), scientific=FALSE)`.  Meanwhile, Swaziland had the lowest life expectancy in 2007 at `r round(min(dat$lifeExp), 1)` years.  The result is a data set with `r nrow(gapminder)` observations.
+Japan had the highest life expectancy in 2007 of `r round(max(dat$lifeExp), 1)` years, and Norway had the highest GDP per capita in 2007 at US\$`r format(max(dat$gdpPercap), scientific=FALSE)`.  Meanwhile, Swaziland had the lowest life expectancy in 2007 at `r round(min(dat$lifeExp), 1)` years.
 
-### 3.2 Life Expectancy and GPD per Capita for Canada
+### 3.3 Life Expectancy and GDP per Capita for Canada
 
-If we are interested in Canada specifically, we can limit our analysis to just one country.  Suppose we want to plot life expectancy against GDP per capita for Canada from `r min(gapminder$year)` to `r max(gapminder$year)`. In order to add the third dimension of time, the plot symbols are the years of the observations.
+The relationship between life expectancy and GDP per capita for Canada over time can be visualized by a scatterplot of the data for every 5 years from `r min(gapminder$year)` to `r max(gapminder$year)`. The plot symbols are the years of the observations, which indicate an increasing relationship over time.
 
-```{r Canada, echo=FALSE, warning=FALSE, fig.cap="Plot of Life Expectancy (years) versus GPD per capita (USD) in Canada every five years from 1952 to 2007"}
+```{r Canada, echo=FALSE, warning=FALSE, fig.cap="Plot of Life Expectancy (years) versus GDP per capita (USD) in Canada every five years from 1952 to 2007"}
 can <- gapminder[gapminder$country=='Canada',] #Subset gapminder dataset to Canada's observations
 
 # Plot with year as plot symbol
 plot(can$gdpPercap, can$lifeExp, type='n',
-     xlab="GPD per Capita", ylab="Life Expectancy",
+     xlab="GDP per Capita", ylab="Life Expectancy",
      main="Data for Canada from 1952 thru 2007")
 text(can$gdpPercap, can$lifeExp, labels=can$year, cex=0.8)
 ```
