--- a/hw02/gapminder.Rmd
+++ b/hw02/gapminder.Rmd
@@ -3,8 +3,8 @@ title: 'Homework 02'
 author: 'Dan Hadley'
 output: 
   html_document:
-    keep_md: true
     toc: true
+    keep_md: yes
 editor_options: 
   chunk_output_type: inline
 ---
@@ -62,7 +62,8 @@ Using the `filter()` function from the `dplyr` package, we filter the gapminder 
 (gap.3 <- gapminder %>% 
    filter(year > 1969,
           year < 1980,
-          country %in% ctries))
+          country %in% ctries)) 
+kable(gap.3, digits=2)
 ```
 
 ## 1.2 Use Pipe Operator to Select Country and GDP per Capita:
@@ -72,12 +73,13 @@ The `select()` function from the `dplyr` package makes it very easy to choose wh
 ```{r pipe}
 ## Select country and gdpPercap columns from filtered dataset
 gap.3 %>% 
-  select(country, gdpPercap)
+  select(country, gdpPercap) %>% 
+  kable(digits=2)
 ```
 
 ## 1.3 Filter `gapminder` to observations with drop in Life Expectancy:
 
-We use the `mutate()` function to add a column to the `gapminder` dataset that calculates the change in life expectancy, in years, for each observation.  This column is named "changeinlifeExp".  For each country's first observation, the change is $0$.  Using this new column, we filter out observations whose life expectancy change is negative.  When displaying the life expectancy changes for observations with negative changes, one should note that the values are rounded to two decimal places and a change that displays $0$ is actually a negative change between in the interval $(0, -0.005)$.
+We use the `mutate()` function to add a column to the `gapminder` dataset that calculates the change in life expectancy, in years, for each observation.  This column is named "changeinlifeExp".  For each country's first observation, the change is $0$.  Using this new column, we filter out observations whose life expectancy change is negative.  There are  a total of `r gapminder %>% group_by(country) %>% mutate(changeinlifeExp = c(0, diff(lifeExp, lag=1))) %>% filter(changeinlifeExp < 0) %>% nrow()` observations meeting this criteria.  When displaying the life expectancy changes for observations with negative changes, one should note that the values are rounded to two decimal places and a change that displays $0$ is actually a negative change between in the interval $(0, -0.005)$.
 
 ```{r LifeExp}
 gapminder %>% 
@@ -95,7 +97,7 @@ Using the `group_by()` and `summarise()` functions, this request can be acheived
 ```{r maxGDP}
 gapminder %>% 
   group_by(country) %>% 
-  summarise(maxgdp = round(max(gdpPercap), 2)) %>%
+  summarise(maxgdp = round(max(gdpPercap), 2)) %>% 
   datatable()
 ```
 
