--- a/hw02/gapminder.Rmd
+++ b/hw02/gapminder.Rmd
@@ -2,11 +2,8 @@
 title: 'Homework 02'
 author: 'Dan Hadley'
 output: 
-  html_document:
+  github_document:
     toc: true
-    keep_md: yes
-editor_options: 
-  chunk_output_type: inline
 ---
 <!---The following chunk allows errors when knitting--->
 
@@ -26,9 +23,9 @@ suppressPackageStartupMessages(library(knitr)) #display tables in HTML for R out
 suppressPackageStartupMessages(library(gridExtra)) #change the layout of multiple ggplots()
 ```
     
-# Question 1
+## Question 1
 
-## 1.1 Subset to Three Countries in the 1970's
+### 1.1 Subset to Three Countries in the 1970's
 
 <!---The following chunk finds the first year of observations for the 70's and the top 3 countries by population for that year--->
 
@@ -66,7 +63,7 @@ gap.3 <- gapminder %>%
 kable(gap.3, digits=2)
 ```
 
-## 1.2 Use Pipe Operator to Select Country and GDP per Capita:
+### 1.2 Use Pipe Operator to Select Country and GDP per Capita:
 
 The `select()` function from the `dplyr` package makes it very easy to choose which columns to display from a dataset.  For this question, we select the "country" and "gdpPercap" columns from the filtered dataset presented in 1.1.
 
@@ -77,31 +74,33 @@ gap.3 %>%
   kable(digits=2)
 ```
 
-## 1.3 Filter `gapminder` to observations with drop in Life Expectancy:
+### 1.3 Filter `gapminder` to observations with drop in Life Expectancy:
 
 We use the `mutate()` function to add a column to the `gapminder` dataset that calculates the change in life expectancy, in years, for each observation.  This column is named "changeinlifeExp".  For each country's first observation, the change is $0$.  Using this new column, we filter out observations whose life expectancy change is negative.  There are  a total of `r gapminder %>% group_by(country) %>% mutate(changeinlifeExp = c(0, diff(lifeExp, lag=1))) %>% filter(changeinlifeExp < 0) %>% nrow()` observations meeting this criteria.  When displaying the life expectancy changes for observations with negative changes, one should note that the values are rounded to two decimal places and a change that displays $0$ is actually a negative change between in the interval $(0, -0.005)$.
 
 ```{r LifeExp}
-gapminder %>% 
+gap.1.3 <- gapminder %>% 
   group_by(country) %>% 
   mutate(changeinlifeExp = c(0, diff(lifeExp, lag=1))) %>% 
   filter(changeinlifeExp < 0) %>% 
-  mutate(changeinlifeExp = round(changeinlifeExp, 2)) %>% #round change to 2 digits
-  datatable()
+  mutate(changeinlifeExp = round(changeinlifeExp, 2)) #round change to 2 digits
+
+kable(gap.1.3[1:10,])
 ```
 
-## 1.4 Show maximum Country GDP per Capita for each Country:
+### 1.4 Show maximum Country GDP per Capita for each Country:
 
 Using the `group_by()` and `summarise()` functions, this request can be acheived in only a few lines.
 
 ```{r maxGDP}
-gapminder %>% 
+gap.1.4 <- gapminder %>% 
   group_by(country) %>% 
-  summarise(maxgdp = round(max(gdpPercap), 2)) %>% 
-  datatable()
+  summarise(maxgdp = round(max(gdpPercap), 2))
+
+kable(gap.1.4[1:10,])
 ```
 
-## 1.5 Scatterplot of Canada's Life Expectancy vs. GDP per Capita:
+### 1.5 Scatterplot of Canada's Life Expectancy vs. GDP per Capita:
 
 By using the `filter()` function, we can pipe the filtered dataset directly into `ggplot()` to create the desired scatterplot.
 
@@ -116,7 +115,7 @@ gapminder %>%
   ylab('Life Expectancy')
 ```
 
-# Question 2
+## Question 2
 
 We analyze the "continent" categorical variable and the "lifeExp" quantitative varible, which gives the continent for each observation and each observation's life expectancy in years, respectively.  A bar plot for continent shows the possible values of the "continent" variable as well as giving the number of observations from each continent.  The continent with the most observations is `r gapminder %>% group_by(continent) %>% count() %>% arrange(desc(n)) %>% .$continent %>% as.character() %>% .[1]` with `r gapminder %>% group_by(continent) %>% count() %>% .$n %>% max()`.  The continent with the least number of observations is `r gapminder %>% group_by(continent) %>% count() %>% arrange(n) %>% .$continent %>% as.character() %>% .[1]` with `r gapminder %>% group_by(continent) %>% count() %>% .$n %>% min()`.
 
@@ -163,7 +162,7 @@ kable(summ.le)
 
 ```
 
-# Question 3
+## Question 3
 
 We now make two plots that can have value for some anlaysis.  The first plot is a scatterplot of GDP per capita by continent versus population-weighted mean life expectancy for each year in the dataset.  This can give us a sense of how life expectancy is changing by continent.  The point of population-weighting the mean life expectancy is so countries with larger populations have more impact on the continent-wide life expectancy.  To calculate GDP per capita, we multiply each country in a continent by its population to get country GDP.  Then by summing country GDP for all countries in a continent, we then divide by the sum of population for all countries on a continent.  This process is repeated for each year in the study.  In order to compare continent life expectancies over time, we use larger plotting symbols for more recent observations.
 
@@ -209,15 +208,15 @@ grid.arrange(plot1, plot2, nrow=1, ncol=2)
 ```
 
 
-# Recycling (Optional):
+## Recycling (Optional):
 
 The results of the code `filter(gapminder, country == c("Rwanda", "Afghanistan"))` are presented below:
 
 ```{r recycling, echo=FALSE}
-datatable(filter(gapminder, country == c("Rwanda", "Afghanistan")))
+kable(filter(gapminder, country == c("Rwanda", "Afghanistan")))
 ```
 
 The result of the code is to return 6 entries for Rwanda and Afghanistan.  The analyst is unable to get all of the data for Rwanda and Afghanistan.  The code fetches Rwanda for 1952, Afghanistan for 1957, Rwanda for 1962, etc.  The country fetched for each year in the dataset alternates between Rwanda and Afghanistan.  The correct code to fetch this data is `filter(gapminder, country=="Rwanda" | country=="Afghanistan")`.
 ```{r correct, echo=FALSE}
-datatable(filter(gapminder, country=="Rwanda" | country=="Afghanistan"))
+kable(filter(gapminder, country=="Rwanda" | country=="Afghanistan")[1:10,])
 ```
