--- a/hw03/hw03_dplyr.Rmd
+++ b/hw03/hw03_dplyr.Rmd
@@ -8,28 +8,23 @@ output:
     toc: true
     toc_float: true
 ---
-<!--This is to set up the two-column and clearer output formats-->
-<style type="text/css">
-.twoC {width: 100%}
-.clearer {clear: both}
-.twoC .table {max-width: 50%; float: right}
-.twoC img {max-width: 50%; float: left}
-</style>
 
 ```{r setup, echo=F, warning=F, message=F}
 knitr::opts_chunk$set(error = TRUE,
                       fig.path = "hw03_files/")
-library(gapminder)
-library(tidyverse)
-library(knitr)
+
+suppressPackageStartupMessages(library(gapminder)) #To use the gapminder tibble
+suppressPackageStartupMessages(library(tidyverse)) #Loads the dplyr package
+suppressPackageStartupMessages(library(DT)) #to nicely display tibbles with datatable()
+suppressPackageStartupMessages(library(knitr)) #For use of kable()
 
 ```
 
 
-### Task Option 2
-##### Get the maximum and minimum of GDP per capita for all continents.
+## Task Option 2
 
-<div class="twoC">
+### Max and Min GDP per Capita for all Continents.
+
 ```{r opt_2_data}
 o2 <- gapminder %>%
         group_by(continent) %>%
@@ -63,20 +58,18 @@ o2g <- gapminder %>%
 
 The table and graph here show the minimum and maximum GDP per capita for each continent. The graph has extra information by providing the trend in minimum and maximum GDP per capita over the study period, while the horizontal lines match the table data by showing the absolute minimums and maximums recorded for each continent.
 
-<div class="twoC">
 ```{r opt_2_output, echo=F}
 
 knitr::kable(o2)
 o2g
 
 ```
-</div>
-<div class="clearer"></div>
 
 
 
-### Task Option 3
-##### Look at the spread of GDP per capita within the continents.
+## Task Option 3
+
+### Spread of GDP per Capita within Continents
 
 
 ```{r opt_3_data}
@@ -104,20 +97,18 @@ o3g <- gapminder %>%
 
 The table here shows the statistical summary describing GDP per capita over the 1952 to 2007 period. The graph also illustrates the full range of data plots by using a jittered layout to show every data point in the dataset. The log scale on the graph makes it easier to see detail at the lower end of the y-axis.
 
-<div class="twoC">
 ```{r opt_3_output, echo=F}
 
 knitr::kable(o3)
 o3g
 
 ```
-</div>
-<div class="clearer"></div>
 
 
 
-### Task Option 6
-##### Find countries with interesting stories.
+## Task Option 6
+
+### Countries with interesting stories.
 
 ```{r opt_6_data, warning=F, message=F}
 
@@ -187,13 +178,10 @@ o6g <-  df1 %>%
 
 I looked for patterns in population change by country over the course of the dataset. Equatorial Guinea and Kuwait stood out because they both have periods that rank among the highest and lowest 5-year population changes among all countries. This is due to armed conflict, with Equatorial Guinea having a period of political violence and war in the 1970's and Kuwait being in conflict with Iraq in the late 1980's and early 1990's. The table and graph both show percentage change over 5-year periods.
 
-<div class="twoC">
 ```{r opt_6_display, echo=F}
 #DT::datatable(o6)
 knitr::kable(o6)
 o6g
 
 ```
-</div>
-<div class="clearer"></div>
 
